# async-compression

./: .gitignore  .release-plz.toml  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  bors.toml  deny.toml  justfile
.github/: dependabot.yml
.github/workflows/: audit.yml  base.yml  coverage.yml  deny.yml  docs.yml  exhaustive.yml  lint.yml  nightly.yml  release-pr.yml  release.yml  wasi.yml
async-buf-write/: Cargo.toml
async-buf-write/src/: async_buf_write.rs  async_buf_writer.rs  async_write.rs  compat.rs  futures_io_03.rs  lib.rs  tokio.rs  tokio_02.rs  tokio_03.rs
ci/remove-dev-dependencies/: Cargo.toml
ci/remove-dev-dependencies/src/: main.rs
crates/async-compression/: CHANGELOG.md  Cargo.toml  README.md
crates/async-compression/examples/: ppmd_tokio_write.rs
crates/async-compression/src/: lib.rs  macros.rs
crates/async-compression/src/futures/bufread/generic/: decoder.rs  encoder.rs
crates/async-compression/src/futures/write/: buf_writer.rs
crates/async-compression/src/futures/write/generic/: decoder.rs
crates/async-compression/src/generic/: mod.rs
crates/async-compression/src/generic/bufread/: decoder.rs  encoder.rs  mod.rs
crates/async-compression/src/generic/write/: buf_writer.rs  decoder.rs  encoder.rs  mod.rs
crates/async-compression/src/tokio/bufread/generic/: decoder.rs  encoder.rs  mod.rs
crates/async-compression/tests/: empty_stream.rs  gzip.rs  ppmd.rs  proptest.rs  snappy.rs  zstd-bufread.rs
crates/async-compression/tests/artifacts/: llvm-as.zstd
crates/async-compression/tests/utils/: algos.rs  impls.rs  test_cases.rs
crates/compression-codecs/: CHANGELOG.md  Cargo.toml
crates/compression-codecs/src/: lib.rs
crates/compression-codecs/src/brotli/: decoder.rs  encoder.rs  mod.rs
crates/compression-codecs/src/bzip2/: decoder.rs  encoder.rs  mod.rs  params.rs
crates/compression-codecs/src/deflate/: decoder.rs  encoder.rs
crates/compression-codecs/src/deflate64/: decoder.rs
crates/compression-codecs/src/flate/: decoder.rs  encoder.rs  mod.rs  params.rs
crates/compression-codecs/src/gzip/: decoder.rs  encoder.rs  header.rs
crates/compression-codecs/src/lz4/: decoder.rs  encoder.rs
crates/compression-codecs/src/lzma/: decoder.rs  encoder.rs  params.rs
crates/compression-codecs/src/ppmd/: decoder.rs  encoder.rs  mod.rs  params.rs
crates/compression-codecs/src/snappy/: decoder.rs  encoder.rs  mod.rs
crates/compression-codecs/src/xz/: decoder.rs  encoder.rs
crates/compression-codecs/src/xz2/: decoder.rs  encoder.rs  mod.rs
crates/compression-codecs/src/zlib/: decoder.rs  encoder.rs
crates/compression-codecs/src/zstd/: decoder.rs  encoder.rs  mod.rs
crates/compression-core/: CHANGELOG.md  Cargo.toml
crates/compression-core/src/: lib.rs  unshared.rs  util.rs
examples/: zlib_tokio_write.rs  zstd_gzip.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: brotli_stream.rs
src/: brotli.rs  buf_write.rs  buf_writer.rs  flate2.rs  lib.rs  lz4.rs  macros.rs  unshared.rs  util.rs  zstd.rs
src/bufread/: brotli.rs  bzip.rs  deflate.rs  gzip.rs  mod.rs  zlib.rs  zstd.rs
src/bufread/deflate/: decoder.rs  encoder.rs  mod.rs
src/bufread/generic/: decoder.rs  encoder.rs  mod.rs
src/bufread/macros/: decoder.rs  encoder.rs
src/codec/: mod.rs
src/codec/brotli/: decoder.rs  encoder.rs  mod.rs
src/codec/bzip/: encoder.rs
src/codec/bzip2/: decoder.rs  encoder.rs  mod.rs
src/codec/deflate/: decoder.rs  encoder.rs
src/codec/deflate64/: decoder.rs  mod.rs
src/codec/flate/: decoder.rs  encoder.rs  mod.rs
src/codec/gzip/: decoder.rs  encoder.rs  header.rs  mod.rs
src/codec/lz4/: decoder.rs  encoder.rs  mod.rs
src/codec/lzma/: decoder.rs  encoder.rs  mod.rs
src/codec/xz/: decoder.rs  encoder.rs
src/codec/xz2/: decoder.rs  encoder.rs
src/codec/zlib/: decoder.rs  encoder.rs
src/codec/zstd/: decoder.rs  encoder.rs  mod.rs
src/futures/: flush.rs  mod.rs
src/futures/bufread/: mod.rs
src/futures/bufread/generic/: decoder.rs  encoder.rs
src/futures/bufread/macros/: decoder.rs  encoder.rs
src/futures/write/: buf_writer.rs  mod.rs
src/futures/write/generic/: decoder.rs  encoder.rs
src/futures/write/macros/: decoder.rs  encoder.rs
src/generic/: mod.rs
src/generic/write/: decoder.rs  encoder.rs
src/read/: brotli.rs  deflate.rs  mod.rs  zlib.rs
src/stream/: brotli.rs  bzip.rs  deflate.rs  flate.rs  gzip.rs  mod.rs  zlib.rs  zstd.rs
src/stream/brotli/: decoder.rs  encoder.rs
src/stream/deflate/: decoder.rs  encoder.rs
src/stream/generic/: decoder.rs  encoder.rs  mod.rs
src/stream/gzip/: decoder.rs  encoder.rs  mod.rs
src/stream/macros/: decoder.rs  encoder.rs
src/stream/zlib/: decoder.rs  encoder.rs
src/stream/zstd/: decoder.rs  encoder.rs
src/tokio/: flush.rs  mod.rs
src/tokio/bufread/: mod.rs
src/tokio/bufread/generic/: decoder.rs  encoder.rs
src/tokio/bufread/macros/: decoder.rs  encoder.rs
src/tokio/write/: buf_writer.rs  mod.rs
src/tokio/write/generic/: decoder.rs  encoder.rs
src/tokio/write/macros/: decoder.rs  encoder.rs
src/tokio_02/: mod.rs
src/tokio_02/bufread/generic/: decoder.rs  encoder.rs  mod.rs
src/tokio_02/bufread/macros/: encoder.rs
src/tokio_02/write/: mod.rs
src/tokio_02/write/generic/: decoder.rs  encoder.rs
src/tokio_02/write/macros/: decoder.rs  encoder.rs
src/tokio_03/bufread/generic/: decoder.rs
src/tokio_03/bufread/macros/: encoder.rs
src/tokio_03/write/: mod.rs
src/tokio_03/write/generic/: decoder.rs  encoder.rs
src/tokio_03/write/macros/: decoder.rs  encoder.rs
src/write/: brotli.rs  buf_writer.rs  bzip2.rs  deflate.rs  gzip.rs  mod.rs  zlib.rs  zstd.rs
src/write/generic/: decoder.rs  encoder.rs
src/write/macros/: decoder.rs  encoder.rs
tests/: brotli.rs  bzip.rs  bzip2.rs  deflate.rs  flate2.rs  gzip.rs  issues.rs  proptest.proptest-regressions  proptest.rs  test.rs  xz.rs  zlib.rs  zstd-dict.rs  zstd.rs
tests/artifacts/: lib.rs
tests/utils/: algos.rs  impls.rs  input_stream.rs  mod.rs  test_cases.rs  track_closed.rs  track_eof.rs
tests/utils/tokio_02_ext/: mod.rs
(+2 files in other folders)
