[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = ["Wim Looman <wim@nemo157.com>", "Allen Bui <fairingrey@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Nullus157/async-compression"
categories = ["compression", "asynchronous"]
edition = "2018"

[workspace.dependencies]
compression-codecs = { version = "0.4.29", path = "crates/compression-codecs" }
compression-core = { version = "0.4.29", path = "crates/compression-core" }
futures-core = { version = "0.3", default-features = false }
pin-project-lite = "0.2"

[workspace.lints.rust]
rust_2018_idioms = "deny"
missing_debug_implementations = { level = "deny", priority = -1 }
# missing_docs = { level = "deny", priority = -1 }
