[package]
name = "async-buf-write"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-core = { version = "0.3.0", default-features = false }
futures-io-03 = { package = "futures-io", version = "0.3.0", default-features = false, features = ["std"], optional = true }
pin-project-lite = "0.2.0"
tokio-02 = { package = "tokio", version = "0.2.0", optional = true, default-features = false }
tokio-03 = { package = "tokio", version = "0.3.0", optional = true, default-features = false }
tokio = { version = "1.0.0", optional = true, default-features = false }
