[package]
name = "compression-codecs"
version = "0.1.0"
description = """
Adaptors for various compression algorithms.
"""
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["compression", "gzip", "zstd", "brotli"]
categories = ["compression"]

[dependencies]
# Workspace dependencies.
compression-core.workspace = true

# Compression algorithms.
brotli = { version = "7.0", optional = true }
bzip2 = { version = "0.5.0", optional = true }
deflate64 = { version = "0.1.5", optional = true }
flate2 = { version = "1.0.13", optional = true }
libzstd = { package = "zstd", version = "0.13.1", optional = true, default-features = false }
memchr = "2"
xz2 = { version = "0.1.6", optional = true }
zstd-safe = { version = "7", optional = true, default-features = false }

[features]
all = ["brotli", "bzip2", "deflate", "gzip", "lzma", "xz", "zlib", "zstd", "deflate64"]

# Individual algorithms.
deflate = ["flate2"]
deflate64 = ["dep:deflate64"]
gzip = ["flate2"]
lzma = ["xz2"]
xz = ["xz2"]
zlib = ["flate2"]
zstd = ["libzstd", "zstd-safe"]
zstdmt = ["zstd", "zstd-safe/zstdmt"]