[package]
name = "compression-core"
version = "0.1.0"
description = """
Abstractions for compression algorithms.
"""
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["compression", "gzip", "zstd", "brotli"]
categories = ["compression"]

[dependencies]
